# lewif-ml-service

./: .gitignore  README.md  app.py  crp_model.joblib  main.py  pyproject.toml  requirements.txt
