[project]
name = "lewif-ml-service"
version = "1.0.0"
description = "CRP prediction microservice for LEWIF biological age calculator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "xgboost>=2.0",
    "joblib>=1.3",
    "numpy>=1.26",
    "pandas>=2.2",
]

[project.scripts]
start = "uvicorn app:app --host 0.0.0.0 --port 7860"
